--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,44 +1,48 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
+  "name": "kwiksqlite-admin",
+  "version": "1.0.0",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build --modern",
+    "build:gh-pages": "DEPLOY_ENV=GH_PAGES vue-cli-service build --report",
+    "lint": "vue-cli-service lint",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@mdi/js": "^5.9.55",
     "axios": "^0.21.1",
+    "chart.js": "^3.3.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-axios": "^3.2.4"
+    "dayjs": "^1.10.5",
+    "install": "^0.13.0",
+    "lodash": "^4.17.21",
+    "npm": "^7.17.0",
+    "numeral": "^2.0.6",
+    "vue": "^3.0.0",
+    "vue-axios": "^3.2.4",
+    "vue-router": "^4.0.0-0",
+    "vue3-chart-v2": "^0.8.2",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.0-beta.2",
+    "@vue/cli-plugin-eslint": "^5.0.0-beta.2",
+    "@vue/cli-plugin-router": "^5.0.0-beta.2",
+    "@vue/cli-plugin-vuex": "^5.0.0-beta.2",
+    "@vue/cli-service": "^5.0.0-beta.2",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-standard": "^6.0.0",
+    "autoprefixer": "^10.2.6",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "eslint": "^7.28.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-vue": "^7.0.0",
+    "gh-pages": "^3.2.0",
+    "postcss": "^8.3.0",
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "^2.1.4"
+  }
 }
