--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@element-plus/icons": "0.0.11",
     "@mdi/js": "^5.9.55",
     "axios": "^0.21.1",
     "chart.js": "^3.3.2",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.5",
+    "element-plus": "^1.0.2-beta.70",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "npm": "^7.17.0",
