--- a/.air.toml
+++ b/.air.toml
@@ -3,7 +3,7 @@ tmp_dir = "tmp"
 
 [build]
   bin = "./tmp/main"
-  cmd = "go build -o ./tmp/main main.go"
+  cmd = "go build -o ./tmp/main *.go"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "frontend"]
   exclude_file = []
