--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@bugsnag/js": "^7.11.0",
+    "@bugsnag/plugin-vue": "^7.11.0",
     "@element-plus/icons": "0.0.11",
     "@mdi/js": "^5.9.55",
     "axios": "^0.21.1",
